--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -27,7 +27,7 @@
 	
 	#menu {
 		width: 100%;
-		height: 60px;
+		height: 50px;
 	}
 	
 		#project {
@@ -60,7 +60,7 @@
 	
 	#pagewrap {
 		width: 100%;
-		height: calc(100% - 60px);
+		height: calc(100% - 50px);
 		overflow-x: hidden;
 		position: relative;
 	}
@@ -156,8 +156,9 @@
 				}
 				
 					.block {
-						width: 40%;
+						width: 50%;
 						height: 50%;
+						border-radius: 50%;
 						position: absolute;
 						opacity: 0.5;
 					}
@@ -274,6 +275,9 @@
 		
 		#project-dropdown .dropdown-toggle {
 			background: none;
+			display: block;
+			padding-bottom: 0;
+
 		}
 		
 			.dropdown .dropdown-toggle:hover, .dropdown .dropdown-toggle:focus {
@@ -473,6 +477,7 @@
 		width: calc(100% - 78px);
 		padding: 4px 8px;
 		height: 27px;
+		overflow-x: hidden;
 	}
 
 
