--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -114,7 +114,6 @@
 					}
 			
 				.specimen {
-					font-size: 64pt;
 					padding: 20px 0 40px 0;
 					border-bottom: 1px solid #ddd;
 				}
@@ -366,121 +365,111 @@
 /***************** selectable ******************/
 	
 	
-	.ui-selectable {
-		border-top: 1px solid #ffa392;
-		border-bottom: 1px solid #ffa392;
-	    display: block;
-	    list-style-type: none;
-	    margin: 0 0 20px 0;
-	    padding: 0px;
-	    width: 100%;
-	    background: #fff;
-	    min-height: 20px;
-	}
-	
-		.ui-selectable:empty {
-			height: 24px;
-			margin: 6px;
-			width: calc(100% - 12px);
-			border: 1px dashed #ffa392;
-		}
-		
-		
-		.ui-selectable li {
-			border: 0;
-			border-bottom: 1px solid #ffa392;
-			height: 28px;
-		}
-		
-			li:last-child {
-				border-bottom: 0px;
-			}
-			
-			 .ui-selectable li.ui-selectee .selectable-ag {
-			    background: #fff;
-			}
-			
-			.ui-selectable li.ui-unselecting .selectable-ag {
-			    background: #F00;
-			}
-			
-			.ui-selectable li.ui-selecting .selectable-ag {
-			    background: #FECA40;
-			}
-			
-			.ui-selectable li.ui-selected .selectable-ag {
-			    background: #f85c37;
-			}
-			
-			/* while dragging */
-			.ui-sortable-helper {
-				background: #fff;
-				box-shadow: 3px 3px 3px #aaa;
-			}
-			
-				.ui-sortable-helper .selectable-diamond {
-					background-image: url('../img/diamonds/diamond.png')!important;
-				}
-			
-			
-	.ui-selectable li span {
-		display: inline-block;
-		
-	}
-	
-	.handle { 
-		float: left;
-		background: #f8f8f8; 
-		width: 10px;
-		height: 27px;
-	}
-	
-		.handle:hover {
-			cursor: move;
-			background: #f85c37; 
-		} 
-			
-	li .selectable-diamond {
-		float: left;
-		height: 27px;
-		width: 28px;
-		background-image: url('../img/diamonds/diamond-full.png');
-	}	
-	
-	li:first-child .selectable-diamond {
-		background-image: url('../img/diamonds/diamond-top.png');
-	}
-	
-	li:last-child .selectable-diamond {
-		background-image: url('../img/diamonds/diamond-bottom.png');
-	}
-	
-	li:only-child .selectable-diamond {
-		background-image: url('../img/diamonds/diamond-sole.png');
-	}
-	
-	
-		
-	.selectable-ag {
-		float: left;
-		text-align: center;
-		width: 40px;
-		height: 27px;
-		padding: 4px;
-	}
-		.selectable-ag:hover {
-			cursor: pointer;
-		}
-	
-	.selectable-name {
-		float: left;
-		width: calc(100% - 78px);
-		padding: 4px 8px;
-		height: 27px;
-		overflow-x: hidden;
-	}
+    .sequence-ul {
+        display: block;
+        list-style-type: none;
+        font-size: 14px;
+    }
+    
+        .sequence-li {
+            display: block;
+        }
+        
+            .sequence-handle {
+                padding: 4px;
+                background: #aaa;
+                color: #fff;
+            }
+            
+                .sequence-handle:hover {
+                    cursor: move;
+                }
+            
+                .sequence-name {
+                    display: inline-block;
+                    padding: 4px;
+                    background: #fff;
+                    color: #000;
+                }
+        
+            .master-ul {
+                border-top: 1px solid #ffa392;
+                display: block;
+                list-style-type: none;
+                margin: 0 0 20px 0;
+                padding: 0px;
+                width: 100%;
+                background: #fff;
+                min-height: 20px;
+            }
+    
+                .master-ul .master-li {
+                    display: block;
+                    border: 0;
+                    border-bottom: 1px solid #ffa392;
+                    height: 28px;
+                }
+                
+                    .master-ul .master-li:hover {
+                        cursor: pointer;
+                    }
+            
+                        
+                    .master-ul .master-li span {
+                        display: inline-block;
+                    }
+                            
+                        .master-ul .master-li .selectable-diamond {
+                            float: left;
+                            height: 27px;
+                            width: 28px;
+                            background-image: url('../img/diamonds/diamond-full.png');
+                        }   
+                        
+                            .master-ul .master-li:first-child .selectable-diamond {
+                                background-image: url('../img/diamonds/diamond-top.png');
+                            }
+                            
+                            .master-ul .master-li:last-child .selectable-diamond {
+                                background-image: url('../img/diamonds/diamond-bottom.png');
+                            }
+                            
+                            .master-ul .master-li:only-child .selectable-diamond {
+                                background-image: url('../img/diamonds/diamond-sole.png');
+                            }
+                            
+                        .master-ul .master-li .selectable-ag {
+                            float: left;
+                            text-align: center;
+                            width: 40px;
+                            height: 27px;
+                            padding: 4px;
+                        }
 
-
+                            
+                            .master-ul .master-li .ui-selected {
+                                background: #f85c37;
+                            }
+                    
+                        .master-ul .master-li .selectable-name {
+                            float: left;
+                            width: calc(100% - 68px);
+                            padding: 4px 8px;
+                            height: 27px;
+                            overflow-x: hidden;
+                        }
+    
+            /* while dragging */
+            .ui-sortable-helper {
+                background: #fff;
+                box-shadow: 3px 3px 3px #aaa;
+            }
+            
+                .ui-sortable-helper .selectable-diamond {
+                    background-image: url('../img/diamonds/diamond.png')!important;
+                }
+                
+                
 
 
 /***************** readmore ******************/
