--- a/Neue/website/css/bootstrap.css
+++ b/Neue/website/css/bootstrap.css
@@ -553,12 +553,15 @@ h1,
 .h1 {
 /*  font-size: 36px;*/
     font-size: 24px;
+    text-decoration: underline;
 }
 
 h2,
 .h2 {
 /*  font-size: 30px;*/
     font-size: 24px;
+    text-decoration: underline;
+    margin-left: 20px;
 }
 
 h3,
