shell command to create a stand-alone red-pill instance that can be served statically this includes a metapolator project (ufo) directory
concatenates all needed js files into one file
makes a single css file from all less files

prepare the current html file with a simple, comment based switch to serve
the new merged main.css and main.js file, instead the of the sources

make a HTTP 200 status code when when served without directory listing

improvements based on comments by @rrthomas

--- a/app/lib/ui/redPill/filesMode/filesMode.less
+++ b/app/lib/ui/redPill/filesMode/filesMode.less
@@ -1,5 +1,5 @@
 @import (reference) "../app";
-@import (reference) "/lib/bower_components/codemirror/lib/codemirror.css";
+@import (inline) "/lib/bower_components/codemirror/lib/codemirror.css";
 
 mtk-files-mode {
     display:block;
