--- a/Neue/website/css/style.css
+++ b/Neue/website/css/style.css
@@ -1,6 +1,6 @@
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 html {
-  font-family: seanregular;
+  font-family: alicenormal;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
@@ -14,8 +14,9 @@ html {
          url('../fonts/sean_hairline-webfont.svg#seanregular') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
+
+<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
 @font-face {
     font-family: 'robotolight';
@@ -29,21 +30,18 @@ html {
 
 }
 
-<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+
 
 body {
-  font-family: seanregular, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 24px;
+  font-family: alicenormal , "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 17px;
   line-height: 1.42857143;
   color: #000;
-  background-color: #fff;
 }
 
 .caption {
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    letter-spacing: .02em;
-    -webkit-text-stroke-width: 0px;
+    font-family: alicenormal, sans-serif;
+    font-size: 12px;
     color: black; 
 }
 
@@ -52,7 +50,7 @@ body {
 }
 
 .logo-space {
-    margin-top: 64px;
+    margin-top: 17px;
 }
 
 .fixed-top {
