--- a/Neue/website/css/style.css
+++ b/Neue/website/css/style.css
@@ -30,6 +30,15 @@ html {
 
 }
 
+@font-face {
+    font-family: 'alicenormal';
+    src: url('../fonts/Alice-Normal.otf'); format('opentype');
+    src: url('../fonts/alice-normal-webfont.woff') format('woff'),
+         url('../fonts/alice-normal-webfont.ttf') format('truetype'),
+         url('../fonts/alice-normal-webfont.svg#alicenormal') format('svg');
+    font-weight: 400;
+    font-style: normal;
+}
 
 
 body {
