--- a/app/lib/ui/redPill/app.less
+++ b/app/lib/ui/redPill/app.less
@@ -53,6 +53,20 @@ mtk-red-pill-glyph {
     margin-left: @app-gap;
     margin-bottom: @app-gap;
     overflow: auto;
+    background: white;
+    
+    svg g.layer-centerline {
+        fill: none;
+        stroke: lime;
+        stroke-width: 0.5;
+    }
+    svg g.layer-outline {
+        fill: black;
+        stroke: white;
+        stroke-width: 0.5;
+        /* disabled for now, we should have a switch for this in the ui */
+        stroke: none;
+    }
 }
 
 mtk-red-pill-glyphs ol{
