--- a/app/lib/ui/redPill/app.less
+++ b/app/lib/ui/redPill/app.less
@@ -35,7 +35,7 @@ red-pill {
 
 mtk-red-pill-glyphs {
     display:block;
-    width: calc(~"100% - 450px");
+    width: 100%;/* calc(~"100% - 450px")*/
 }
 
 mtk-red-pill-glyphs label{
