render components using the original codepath.
outlineb isn't needed.

more sensible choice of component color(grey with a bit opacity)

--- a/app/lib/ui/redPill/app.less
+++ b/app/lib/ui/redPill/app.less
@@ -67,6 +67,11 @@ mtk-red-pill-glyph {
         /* disabled for now, we should have a switch for this in the ui */
         stroke: none;
     }
+    svg g.component {
+        fill: #333;
+        opacity: 0.9;
+        stroke: none;
+    }
 }
 
 mtk-red-pill-glyphs ol{
