render components using the original codepath.

--- a/app/lib/ui/redPill/app.less
+++ b/app/lib/ui/redPill/app.less
@@ -67,6 +67,13 @@ mtk-red-pill-glyph {
         /* disabled for now, we should have a switch for this in the ui */
         stroke: none;
     }
+    svg g.layer-component {
+        fill: red;
+        stroke: white;
+        stroke-width: 0.5;
+        /* disabled for now, we should have a switch for this in the ui */
+        stroke: none;
+    }
 }
 
 mtk-red-pill-glyphs ol{
