remove old 'master' angular module, rename 'filesMode' into 'textEditor'

--- a/app/lib/ui/redPill/textEditor/textEditor.less
+++ b/app/lib/ui/redPill/textEditor/textEditor.less
@@ -1,23 +1,23 @@
 @import (reference) "../app";
 @import (inline) "/lib/bower_components/codemirror/lib/codemirror.css";
 
-mtk-files-mode {
+mtk-text-editor {
     display:block;
 }
 
-mtk-files-mode>ol {
+mtk-text-editor>ol {
     list-style: none;
     padding: 0 0 @app-gap 0;
 }
 
-mtk-files-mode>ol>li {
+mtk-text-editor>ol>li {
     margin-bottom: @app-gap;
     border: @app-border;
     background: @app-color;
 }
 
 
-mtk-files-mode .CodeMirror {
+mtk-text-editor .CodeMirror {
     height: 400px;
 
 }
