include codemiror in the demo build
add io as a angular constant/service

outline switch between demo and normall mode

--- a/app/lib/ui/redPill/app.less
+++ b/app/lib/ui/redPill/app.less
@@ -35,8 +35,12 @@ red-pill {
 
 mtk-red-pill-glyphs {
     display:block;
-    width: calc(~"100% - 450px");/* 100% */
+    width: 100%;
 }
+.hasEditor mtk-red-pill-glyphs {
+    width: calc(~"100% - 450px");
+}
+
 
 mtk-red-pill-glyphs label{
     display: inline;
