cleaned up and ready for the next adventure

--- a/app/lib/ui/redPill/app.less
+++ b/app/lib/ui/redPill/app.less
@@ -67,7 +67,7 @@ mtk-red-pill-glyph {
         /* disabled for now, we should have a switch for this in the ui */
         stroke: none;
     }
-    svg g.layer-component {
+    svg g.component {
         fill: red;
         stroke: white;
         stroke-width: 0.5;
